--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
+<head>
     <title>My landing Page</title>
-  </head>
-  <body>
-    <h1>Hallo</h1>
-  </body>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <div class="wrappper">
+
+      <div class="header">
+        <div class="in-header">HEAD</div>
+      </div>
+    <div class="row">
+      <div class="sidebar-l">
+        <div class="in-sidebar-l">Sidebar</div>
+      </div>
+      <div class="content">
+        <div class="in-content">Content</div>
+      </div>
+      <div class="sidebar-r">
+        <div class="in-sidebar-r">Sidebar</div>
+      </div>
+    </div>
+      <div class="footer">
+        <div class="in-footer">FOOTER</div>
+      </div>
+
+  </div>
+
+</body>
 </html>
