--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>My landing Page</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
 
