--- a/index.html
+++ b/index.html
@@ -3,14 +3,93 @@
 <head>
     <title>My landing Page</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css\style.css">
+    
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body{
+  color: white;
+  font-size: 30px;
+}
+.imghead {
+  padding-right: 0px;
+  padding-top: 0px;
+}
+.row:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.row { display: inline-block; }
+/* start commented backslash hack \*/
+* html .rowrowrow { height: 1%; }
+.row { display: block; }
+/* close commented backslash hack */
+
+.header {
+  margin-bottom: 10px;
+
+}
+.in-header {
+  background: white;
+  height: 200px;
+}
+.content {
+  width: 70%;
+  float: left;
+}
+.in-content {
+  min-height: 500px;
+  background: grey;
+}
+
+.sidebar-l {
+  width: 15%;
+  float: left;
+  padding-right: 10px;
+}
+.in-sidebar-l {
+  background: red;
+  min-height: 500px;
+}
+.sidebar-r {
+  width: 15%;
+  float: left;
+  padding-left: 10px;
+}
+.in-sidebar-r {
+  background: red;
+  min-height: 500px;
+}
+
+.footer {
+  margin-top: 10px;
+  max-height: 100px;
+}
+.in-footer {
+  background: blue;
+  min-height: 100px;
+}
+
+</style>
+
 </head>
 <body>
 
   <div class="wrappper">
 
       <div class="header">
-        <div class="in-header">HEAD</div>
+        <div class="in-header">
+            <div class="imghead">
+              <a target="_self" href="index.html">
+                <img src="img\logoheader.jpg" alt="BMWlogo" width="200px" height="200px">
+            </div>
+        </div>
       </div>
     <div class="row">
       <div class="sidebar-l">
